fix(scenarios): Adding missing scenarios 4 & 10