@@ -1,4 +1,3 @@
---enable-preview
 -Djdk.tracePinnedThreads=full
 -XX:+MaxFDLimit
 -XX:+UseG1GC 
